@@ -65,6 +65,7 @@ CHANGELOG Roundcube Webmail
 - Improve responsiveness of messages displaying (#1486986)
 - Add option for minimum length of autocomplete's string (#1486428)
 - Fix operations on messages in unsubscribed folder (#1487107)
+- Add support for shared folders (#1403507)
 
 RELEASE 0.4.2
 -------------
